Acrescentado tecla on/off

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div onclick="teclaC()" class="tecla-esp">C</div>
                 <div onclick="teclaCLM()" class="tecla-esp">CLM</div>
                 <div onclick="" class="tecla-esp">S/F</div>
-                <div onclick="" class="tecla-esp">S/F</div>
+                <div onclick="teclaOnOff()" class="tecla-esp">ON/OFF</div>
                 <div onclick="teclaRM()" class="tecla-esp">RM</div>
                 <div onclick="teclaMmais()" class="tecla-esp">M+</div>
                 <div onclick="teclaMmenos()" class="tecla-esp">M-</div>
