--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div onclick="teclaRM()" class="tecla-esp">RM</div>
                 <div onclick="teclaMmais()" class="tecla-esp">M+</div>
                 <div onclick="teclaMmenos()" class="tecla-esp">M-</div>
-                <div onclick="defOp('/')" class="tecla-esp">/</div>
+                <div onclick="defOp('/')" class="tecla-esp" op="/">/</div>
                 <div onclick="calculadora.raizQuadrada()" class="tecla-esp">RAIZ</div>
                 <div onclick="calculadora.inverso()" class="tecla-esp">1/x</div>
                 <div onclick="calculadora.trocaSinal()" class="tecla-esp">+/-</div>
@@ -34,15 +34,15 @@
                 <div onclick="digito('7')" class="tecla">7</div>
                 <div onclick="digito('8')" class="tecla">8</div>
                 <div onclick="digito('9')" class="tecla">9</div>
-                <div onclick="defOp('*')" class="tecla-esp">x</div>
+                <div onclick="defOp('*')" class="tecla-esp" op="*">x</div>
                 <div onclick="digito('4')" class="tecla">4</div>
                 <div onclick="digito('5')" class="tecla">5</div>
                 <div onclick="digito('6')" class="tecla">6</div>
-                <div onclick="defOp('-')" class="tecla-esp">-</div>
+                <div onclick="defOp('-')" class="tecla-esp" op="-">-</div>
                 <div onclick="digito('1')" class="tecla">1</div>
                 <div onclick="digito('2')" class="tecla">2</div>
                 <div onclick="digito('3')" class="tecla">3</div>
-                <div onclick="defOp('+')" class="tecla-esp">+</div>
+                <div onclick="defOp('+')" class="tecla-esp" op="+">+</div>
                 <div onclick="digito('.')" class="tecla">.</div>
                 <div onclick="digito('0')" class="tecla">0</div>
                 <div onclick="calculadora.porcentagem()" class="tecla-esp">%</div>
